Fix the problem on mobile view for the API page which had a border to the right

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -994,4 +994,9 @@ img {
   .navbar-nav-list {
     margin-top: 18px !important;
   }
+
+  .extra-col {
+    display: none;
+  }
 }
+
